--- a/backend/pms/docker-compose.yml
+++ b/backend/pms/docker-compose.yml
@@ -7,6 +7,7 @@ services:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: 1234
       PGDATA: /data/postgres
+      POSTGRES_DB: pms-db
     volumes:
       - postgres:/data/postgres
     ports:
