--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-icons": "^5.0.1",
+    "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
