--- a/backend/pms/.gitignore
+++ b/backend/pms/.gitignore
@@ -3,6 +3,8 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+**/src/main/resources/zfilestorage/**
+!**/src/main/resources/zfilestorage/dump/**
 
 ### STS ###
 .apt_generated
