--- a/backend/pms/pom.xml
+++ b/backend/pms/pom.xml
@@ -65,6 +65,12 @@
             <version>2.3.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-mail</artifactId>
+        </dependency>
+
+
         <!--	Test	-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
