Add forgotPassword - forgotpassword - sendToken - changepassword - send forgot passowrd to email

--- a/backend/pms/src/main/resources/application.yml
+++ b/backend/pms/src/main/resources/application.yml
@@ -1,4 +1,5 @@
 spring:
+  reset-password-url: http://localhost:3000/change-password
   application:
     name: pms
   datasource:
@@ -38,4 +39,4 @@ server:
 jwt:
   secret: ${JWT_SECRET:1234}
 mail:
-  enabled: ${ENABLED:false}
+  enabled: ${ENABLED:true}
