--- a/backend/pms/.gitignore
+++ b/backend/pms/.gitignore
@@ -5,6 +5,7 @@ target/
 !**/src/test/**/target/
 **/src/main/resources/zfilestorage/**
 !**/src/main/resources/zfilestorage/dump/**
+.idea/
 
 ### STS ###
 .apt_generated
