--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,17 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "@vis.gl/react-google-maps": "^0.5.4",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
     "react-icons": "^5.0.1",
+    "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
