--- a/backend/pms/src/main/resources/application.yml
+++ b/backend/pms/src/main/resources/application.yml
@@ -8,7 +8,7 @@ spring:
     url: jdbc:postgresql://${POSTGRES_HOST:localhost:5432}/${POSTGRES_DB:pms-db}
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
