--- a/backend/pms/pom.xml
+++ b/backend/pms/pom.xml
@@ -100,6 +100,7 @@
                 </configuration>
             </plugin>
         </plugins>
+        <finalName>mini-pms</finalName>
     </build>
 
 </project>
