--- a/backend/pms/pom.xml
+++ b/backend/pms/pom.xml
@@ -11,10 +11,10 @@
     <groupId>com.mini</groupId>
     <artifactId>pms</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>pms</name>
+    <name>mini-pms</name>
     <description>PMS project for Spring Boot</description>
     <properties>
-        <java.version>21</java.version>
+        <java.version>17</java.version>
     </properties>
     <dependencies>
         <dependency>
@@ -87,14 +87,6 @@
 
     <build>
         <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.8.1</version>
-                <configuration>
-                    <source>21</source>
-                    <target>21</target>
-                </configuration>
-            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
