--- a/backend/pms/Dockerfile
+++ b/backend/pms/Dockerfile
@@ -3,7 +3,6 @@ FROM openjdk:17-jdk-alpine
 WORKDIR /app
 
 COPY target/*.jar app.jar
-
 EXPOSE 8080
-
-ENTRYPOINT ["java","-jar","/app/app.jar"]
+ENV JAVA_OPTS=""
+ENTRYPOINT [ "sh", "-c", "java $JAVA_OPTS -Djava.security.egd=file:/dev/./urandom -jar /app/app.jar" ]
