--- a/backend/pms/src/main/resources/application.yml
+++ b/backend/pms/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
     properties:
       hibernate:
         dialect: org.hibernate.dialect.PostgreSQLDialect
-        format_sql: false
+        format_sql: true
     show-sql: true
     defer-datasource-initialization: true
     generate-ddl: true
