--- a/backend/pms/pom.xml
+++ b/backend/pms/pom.xml
@@ -9,9 +9,9 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.mini</groupId>
-    <artifactId>pms</artifactId>
+    <artifactId>rent-a-place</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>mini-pms</name>
+    <name>RentAPlace</name>
     <description>PMS project for Spring Boot</description>
     <properties>
         <java.version>17</java.version>
@@ -43,10 +43,15 @@
             <version>2.3.0</version>
         </dependency>
         <dependency>
+            <groupId>com.h2database</groupId>
+            <artifactId>h2</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <!-- <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
-        </dependency>
+        </dependency> -->
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
@@ -70,6 +75,11 @@
             <groupId>org.modelmapper</groupId>
             <artifactId>modelmapper</artifactId>
             <version>2.4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.razorpay</groupId>
+            <artifactId>razorpay-java</artifactId>
+            <version>1.4.3</version>
         </dependency>
 
         <!--	Test	-->
@@ -100,7 +110,7 @@
                 </configuration>
             </plugin>
         </plugins>
-        <finalName>mini-pms</finalName>
+        <finalName>rent-a-place</finalName>
     </build>
 
 </project>
