--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.50.0",
+    "react-hot-toast": "^2.6.0",
     "react-icons": "^5.0.1",
     "react-leaflet": "^4.2.1",
     "react-query": "^3.39.3",
